--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
     <title>Calculator</title>
 </head>
 <body>
     <h1>Basic Calculator</h1><br>
     <form id="myform" name="calc">
-        <input name="display" ><br>
-        <input type="button" value="0">
-        <input type="button" value="1">
-        <input type="button" value="2">
-        <input type="button" value="+"><br>
-        <input type="button" value="3">
-        <input type="button" value="4">
-        <input type="button" value="5">
-        <input type="button" value="-"><br>
-        <input type="button" value="6">
+        <input name="display" style="width: 675px;height: 100px;text-align: center;background-color: blue;"><br>
         <input type="button" value="7">
         <input type="button" value="8">
-        <input type="button" value="X"><br>
         <input type="button" value="9">
-        <input type="button" value="C">
-        <input type="button" value="=">
-        <input type="button" value="&#247;">
+        <input type="button" value="C" style="background-color:red ;"><br>
+        <input type="button" value="4">
+        <input type="button" value="5">
+        <input type="button" value="6">
+        <input type="button" value="&#247;" style="background-color: gray;"><br>
+        <input type="button" value="1">
+        <input type="button" value="2">
+        <input type="button" value="3">
+        <input type="button" value="x" style="background-color:gray ;"><br>
+        <input type="button" value="0">
+        <input type="button" value="+" style="background-color: grey;">
+        <input type="button" value="-" style="background-color: grey;">
+        <input type="button" value="=" style="background-color:slateblue ;">
 
     </form>
 </body>
